--- a/assets/stylesheets/sections/_sections.scss
+++ b/assets/stylesheets/sections/_sections.scss
@@ -76,7 +76,7 @@
                         flex-wrap: wrap;
                         gap: 10px;
                         select,
-                        .wpsl-search-input {
+                        #wpsl-search-input {
                             padding: 17px 20px;
                             font-size: 15px;
                             border-color: var(--dark);
