--- a/style.css
+++ b/style.css
@@ -12854,6 +12854,9 @@ body.sticky--header #masthead {
           display: flex;
           line-height: 1;
           align-items: center; }
+          @media screen and (min-width: 992px) {
+            .dealer--locator--holder .dealer--locator #wpsl-wrap .wpsl-search #wpsl-search-wrap form div label {
+              white-space: nowrap; } }
         .dealer--locator--holder .dealer--locator #wpsl-wrap .wpsl-search #wpsl-search-wrap form .wpsl-input {
           margin: 0; }
           .dealer--locator--holder .dealer--locator #wpsl-wrap .wpsl-search #wpsl-search-wrap form .wpsl-input input {
@@ -12882,6 +12885,9 @@ body.sticky--header #masthead {
           border: none;
           color: #fff;
           padding: 17px 20px; }
+          @media screen and (max-width: 767px) {
+            .dealer--locator--holder .dealer--locator #wpsl-wrap .wpsl-search #wpsl-search-wrap form #wpsl-search-btn {
+              width: 100%; } }
         .dealer--locator--holder .dealer--locator #wpsl-wrap .wpsl-search #wpsl-search-wrap form #wpsl-radius {
           margin: 0; }
           @media screen and (max-width: 767px) {
