--- a/assets/stylesheets/sections/_sections.scss
+++ b/assets/stylesheets/sections/_sections.scss
@@ -244,7 +244,7 @@
                 }
                 @include responsive(xs) {
                     color: var(--wp--preset--color--maroon);
-                    border: none;
+                    border: none !important
                 }
             }
            
