--- a/style.css
+++ b/style.css
@@ -12962,7 +12962,8 @@ body.sticky--header #masthead {
       display: block; }
       @media screen and (max-width: 767px) {
         .listing--buttons.listing--buttons.listing--buttons .btn a {
-          padding: 0; } }
+          padding: 0;
+          border: none !important; } }
     .listing--buttons.listing--buttons.listing--buttons .btn.btn-appointment a {
       justify-content: center; }
       @media (min-width: 768px) {
@@ -12972,8 +12973,7 @@ body.sticky--header #masthead {
           color: #fff; } }
       @media screen and (max-width: 767px) {
         .listing--buttons.listing--buttons.listing--buttons .btn.btn-appointment a {
-          color: var(--wp--preset--color--maroon);
-          border: none !important; } }
+          color: var(--wp--preset--color--maroon); } }
     .listing--buttons.listing--buttons.listing--buttons .btn.btn-stock a {
       border: none !important;
       text-decoration: underline;
