--- a/style.css
+++ b/style.css
@@ -12974,6 +12974,9 @@ body.sticky--header #masthead {
       @media screen and (max-width: 767px) {
         .listing--buttons.listing--buttons.listing--buttons .btn.btn-appointment a {
           color: var(--wp--preset--color--maroon); } }
+    @media screen and (max-width: 480px) {
+      .listing--buttons.listing--buttons.listing--buttons .btn.btn-appointment {
+        width: 100%; } }
     .listing--buttons.listing--buttons.listing--buttons .btn.btn-stock a {
       border: none !important;
       text-decoration: underline;
