--- a/style.css
+++ b/style.css
@@ -12954,7 +12954,8 @@ body.sticky--header #masthead {
   flex-wrap: wrap; }
   .listing--buttons.listing--buttons.listing--buttons .btn {
     padding: 0;
-    border: none; }
+    border: none;
+    flex-grow: 1; }
     .listing--buttons.listing--buttons.listing--buttons .btn a {
       padding: 18px 25px;
       font-size: 15px;
