--- a/style.css
+++ b/style.css
@@ -12231,6 +12231,10 @@ img {
   aspect-ratio: 4/2;
   object-fit: cover; }
 
+@media screen and (min-width: 992px) {
+  .w-lg-auto {
+    width: auto !important; } }
+
 body {
   font-family: "pennypacker-semiwide", sans-serif;
   color: var(--text-color);
