--- a/style.css
+++ b/style.css
@@ -11537,6 +11537,9 @@ img {
 .wp-block-button__link.has-maroon-background-color:hover, .wp-block-button__link.has-maroon-background-color:active, .wp-block-button__link.has-maroon-background-color:focus {
   color: var(--bs-white) !important;
   background-color: var(--bs-black) !important; }
+.wp-block-button__link.has-white-theme-background-color:hover, .wp-block-button__link.has-white-theme-background-color:active, .wp-block-button__link.has-white-theme-background-color:focus {
+  color: var(--bs-white) !important;
+  background-color: var(--bs-black) !important; }
 
 .wp-block-button.is-style-outline--1 .wp-block-button__link:hover, .wp-block-button.is-style-outline--1 .wp-block-button__link:active, .wp-block-button.is-style-outline--1 .wp-block-button__link:focus {
   background-color: var(--bs-white) !important; }
