--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -689,7 +689,8 @@ img {
     );
 }
 
-.swiper-team-slider.swiper-team-slider.swiper-team-slider.swiper-team-slider {
+.swiper-team-slider.swiper-team-slider.swiper-team-slider.swiper-team-slider,
+.swiper-post--style-1.swiper-post--style-1.swiper-post--style-1 {
     .swiper-pagination-navigation-style-2 {
         position: static;
         transition: none;
