--- a/style.css
+++ b/style.css
@@ -11820,7 +11820,8 @@ img {
 .gradient-overlay {
   mask-image: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, black 20%, black 80%, rgba(0, 0, 0, 0) 100%); }
 
-.swiper-team-slider.swiper-team-slider.swiper-team-slider.swiper-team-slider .swiper-pagination-navigation-style-2 {
+.swiper-team-slider.swiper-team-slider.swiper-team-slider.swiper-team-slider .swiper-pagination-navigation-style-2,
+.swiper-post--style-1.swiper-post--style-1.swiper-post--style-1 .swiper-pagination-navigation-style-2 {
   position: static;
   transition: none;
   width: 100%;
