--- a/style.css
+++ b/style.css
@@ -11832,7 +11832,7 @@ img {
   width: 100%;
   justify-content: center; }
 
-.swiper-pagination-navigation-style-2--static {
+.swiper-pagination-navigation-style-2--static.swiper-pagination-navigation-style-2--static.swiper-pagination-navigation-style-2--static.swiper-pagination-navigation-style-2--static {
   position: static;
   transition: none;
   width: 100%;
