--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -734,7 +734,7 @@ img {
     }
     .swiper-pagination-style--timeline {
         bottom: auto;
-        top: calc(var(--image-height) + 70px);
+
         display: flex;
         justify-content: space-between;
         gap: 10px;
@@ -765,6 +765,9 @@ img {
         @include responsive(xxs) {
             --swiper-pagination-bullet-size: 10px;
         }
+    }
+    @include responsive(sm-lg) {
+        top: calc(var(--image-height) + 70px);
     }
 }
 
