--- a/style.css
+++ b/style.css
@@ -11851,7 +11851,6 @@ img {
   margin-bottom: 150px; }
 .swiper-slider-timeline .swiper-pagination-style--timeline {
   bottom: auto;
-  top: calc(var(--image-height) + 70px);
   display: flex;
   justify-content: space-between;
   gap: 10px;
@@ -11883,6 +11882,9 @@ img {
   @media screen and (max-width: 480px) {
     .swiper-slider-timeline .swiper-pagination-style--timeline {
       --swiper-pagination-bullet-size: 10px; } }
+@media (min-width: 768px) {
+  .swiper-slider-timeline {
+    top: calc(var(--image-height) + 70px); } }
 
 .careers--category a {
   pointer-events: none;
