--- a/style.css
+++ b/style.css
@@ -11463,8 +11463,8 @@ img {
 
 .offcanvas.offcanvas {
   max-width: 1000px;
-  width: 100%;
-  z-index: 99999999; }
+  z-index: 99999999;
+  width: calc(100% - 90px); }
   .offcanvas.offcanvas .btn-close.btn-close {
     position: absolute;
     left: 0;
@@ -11486,7 +11486,7 @@ img {
         width: 30px;
         height: 30px;
         padding: 10px;
-        transform: translateX(-120%);
+        transform: translateX(-190%);
         background-size: 15px; } }
   .offcanvas.offcanvas.offcanvas-start .btn-close.btn-close {
     right: 0;
@@ -11510,7 +11510,7 @@ img {
           display: none; } }
   @media screen and (max-width: 991px) {
     .offcanvas.offcanvas {
-      max-width: 85%; } }
+      max-width: 85% !important; } }
 
 .wpcf7.wpcf7 p {
   margin-bottom: 0; }
