--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -782,7 +782,7 @@ img {
         }
     }
 }
-#ExteriorGallery {
+#InteriorGallery {
     .swiper-pagination-navigation-style-2 {
         @include responsive(xs) {
             position: static;
