--- a/style.css
+++ b/style.css
@@ -11894,7 +11894,8 @@ img {
     gap: 10px !important; } }
 
 @media screen and (max-width: 767px) {
-  #InteriorGallery .swiper-pagination-navigation-style-2 {
+  #InteriorGallery .swiper-pagination-navigation-style-2,
+  #ExteriorGallery .swiper-pagination-navigation-style-2 {
     position: static;
     width: 100%;
     justify-content: center; } }
