--- a/style.css
+++ b/style.css
@@ -11533,6 +11533,9 @@ img {
     border-bottom-color: var(--bs-black); }
     .wp-block-button.wp-block-button.is-style-outline-v2 .wp-block-button__link:hover, .wp-block-button.wp-block-button.is-style-outline-v2 .wp-block-button__link:active, .wp-block-button.wp-block-button.is-style-outline-v2 .wp-block-button__link:focus {
       border-bottom-color: var(--bs-white); }
+  .wp-block-button.wp-block-button:not(.is-style-outline) .wp-block-button__link {
+    padding-top: 15px;
+    padding-bottom: 15px; }
 
 .wp-block-button__link.has-maroon-background-color:hover, .wp-block-button__link.has-maroon-background-color:active, .wp-block-button__link.has-maroon-background-color:focus {
   color: var(--bs-white) !important;
